增加职位服务 增加角色服务

--- a/upms-mybatis-gennerator/src/main/resources/application-dev.properties
+++ b/upms-mybatis-gennerator/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-#数据库连接
+#\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/upms?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/upms?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=guofeng_sa_123
