--- a/打包部署/upmscoreservice/config/application.properties
+++ b/打包部署/upmscoreservice/config/application.properties
@@ -4,7 +4,7 @@ logging.config=classpath:logback-spring.xml
 # Spring boot application
 spring.application.name=upms-core
 #srping profiles
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 spring.messages.basename=i18n/message
 spring.messages.encoding=UTF-8
