更新打包错误问题 pom 版本回退 更新log日志 位置 更新应用未配置问题

--- a/upms-core/pom.xml
+++ b/upms-core/pom.xml
@@ -15,6 +15,7 @@
     <commons.version>1.0-SNAPSHOT</commons.version>
     <asciidoctor.maven.plugin.version>1.5.3</asciidoctor.maven.plugin.version>
     <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
+    <spring.restdocs.mockmvc.version>2.0.3.RELEASE</spring.restdocs.mockmvc.version>
 </properties>
 
 <dependencies>
