--- a/upms-core/src/main/resources/application-dev.properties
+++ b/upms-core/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
-#自定义属性 应用程序身份令牌 自定义
+#\u81EA\u5B9A\u4E49\u5C5E\u6027 \u5E94\u7528\u7A0B\u5E8F\u8EAB\u4EFD\u4EE4\u724C \u81EA\u5B9A\u4E49
 application.token=f3b8d65c-a2ed-11e9-8abd-c85b762eb0b1
-#自定义属性 默认权限不设置是否允许访问
+#\u81EA\u5B9A\u4E49\u5C5E\u6027 \u9ED8\u8BA4\u6743\u9650\u4E0D\u8BBE\u7F6E\u662F\u5426\u5141\u8BB8\u8BBF\u95EE
 application.unset.default=true
-#自定义属性redis 中 app相关缓存过期时间 单位D 小于等于0系统默认设置30
+#\u81EA\u5B9A\u4E49\u5C5E\u6027redis \u4E2D app\u76F8\u5173\u7F13\u5B58\u8FC7\u671F\u65F6\u95F4 \u5355\u4F4DD \u5C0F\u4E8E\u7B49\u4E8E0\u7CFB\u7EDF\u9ED8\u8BA4\u8BBE\u7F6E30
 redis.exp.dur.app=30
-#自定义属性redis 中 user相关缓存过期时间 单位D 小于等于0系统默认设置1
+#\u81EA\u5B9A\u4E49\u5C5E\u6027redis \u4E2D user\u76F8\u5173\u7F13\u5B58\u8FC7\u671F\u65F6\u95F4 \u5355\u4F4DD \u5C0F\u4E8E\u7B49\u4E8E0\u7CFB\u7EDF\u9ED8\u8BA4\u8BBE\u7F6E1
 redis.exp.dur.user=2
-#数据库连接
+#\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/upms?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
 spring.datasource.username=root
@@ -31,16 +31,7 @@ spring.redis.lettuce.pool.min-idle=0
 # Shutdown timeout
 spring.redis.lettuce.shutdown-timeout=100ms
 
-#doubbo
-# Base packages to scan Dubbo Component: @org.apache.dubbo.config.annotation.Service
-dubbo.scan.base-packages=com.gy.upms.servicesimp.duplexImp
-# Dubbo Application
-## The default value of dubbo.application.name is ${spring.application.name}
-## dubbo.application.name=${spring.application.name}
-# Dubbo Protocol
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=20000
-## Dubbo Registry
-dubbo.registry.address=N/A
-## DemoService version
-duplex.service.version=1.0.0
+# spring eureka
+eureka.client.service-url.defaultZone=http://test:123456@127.0.0.1:8761/eureka/
+#Health Checks
+eureka.client.healthcheck.enabled=true
