修改引用包

--- a/upms-core/pom.xml
+++ b/upms-core/pom.xml
@@ -12,7 +12,7 @@
 <artifactId>upms-core</artifactId>
 <properties>
     <upms.services.version>1.0-SNAPSHOT</upms.services.version>
-    <commons.version>1.0-SNAPSHOT</commons.version>
+    <commons.version>0.0.1-SNAPSHOT</commons.version>
     <asciidoctor.maven.plugin.version>1.5.3</asciidoctor.maven.plugin.version>
     <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
     <spring.restdocs.mockmvc.version>2.0.3.RELEASE</spring.restdocs.mockmvc.version>
@@ -20,13 +20,13 @@
 
 <dependencies>
     <dependency>
-        <groupId>com.gy.upms</groupId>
+        <groupId>com.gy</groupId>
         <artifactId>upms-services</artifactId>
         <version>${upms.services.version}</version>
     </dependency>
     <dependency>
-        <groupId>com.gy.commons</groupId>
-        <artifactId>commons</artifactId>
+        <groupId>com.gy</groupId>
+        <artifactId>commons-security</artifactId>
         <version>${commons.version}</version>
     </dependency>
     <!-- spring -->
