--- a/upms-core/pom.xml
+++ b/upms-core/pom.xml
@@ -3,8 +3,8 @@
                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <parent>
-    <artifactId>upms</artifactId>
-    <groupId>com.gy.upms</groupId>
+    <artifactId>upms-parent</artifactId>
+    <groupId>com.gy</groupId>
     <version>1.0-SNAPSHOT</version>
 </parent>
 <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
 <artifactId>upms-core</artifactId>
 <properties>
     <upms.services.version>1.0-SNAPSHOT</upms.services.version>
-    <commons.version>1.0-SNAPSHOT</commons.version>
+    <commons.version>0.0.1-SNAPSHOT</commons.version>
     <asciidoctor.maven.plugin.version>1.5.3</asciidoctor.maven.plugin.version>
     <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
     <spring.restdocs.mockmvc.version>2.0.3.RELEASE</spring.restdocs.mockmvc.version>
@@ -21,13 +21,13 @@
 
 <dependencies>
     <dependency>
-        <groupId>com.gy.upms</groupId>
+        <groupId>com.gy</groupId>
         <artifactId>upms-services</artifactId>
         <version>${upms.services.version}</version>
     </dependency>
     <dependency>
-        <groupId>com.gy.commons</groupId>
-        <artifactId>commons</artifactId>
+        <groupId>com.gy</groupId>
+        <artifactId>commons-security</artifactId>
         <version>${commons.version}</version>
     </dependency>
     <!-- spring -->
